k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bounty-app # Match env.APP_NAMESPACE in workflow
