k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: bounty-app
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: us-central1-docker.pkg.dev/bounty-458107/bounty-repo/frontend:latest # Workflow replaces this
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet: { path: /, port: 3000 }
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet: { path: /, port: 3000 }
          initialDelaySeconds: 30
          periodSeconds: 20
